--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,18 @@
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+html,
+body {
+  height: 100vh;
+  background-color: #1b2838;
+  color: #f0f0f0;
+}
+html {
+  font-size: 62.5%;
+}
+body {
+  font-size: 1.6rem;
 }
