--- a/src/components/logo/Logo.module.css
+++ b/src/components/logo/Logo.module.css
@@ -3,6 +3,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100%;
+    width: 8.2vw;
     gap: 4%;
-    font-size: .9em;
+    padding: 2%;
+    font-size: 1em;
+}
+.logo img {
+    height: 85%;
+}
+@media (max-width: 850px) {
+    .name{
+        display: none;
+    }
 }
