--- a/src/components/navbar/NavBar.module.css
+++ b/src/components/navbar/NavBar.module.css
@@ -5,23 +5,19 @@
   height: 17.5vh;
   background-color: #171a21;
   padding: 0 5%;
+  min-width: 100vw;
+  width: 100%;
+
 }
-.navBar input[type="text"] {
-  height: 6.5vh;
-  width: 21%;
-  border: none;
-  outline: none;
-  font-size: 1.1em;
-  padding: 1%;
-  background: none;
-  border-bottom:solid 2px #28272c;
-  transition: .3s ease;
-  color: #f0f0f0;
+.cartShow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 8.2vw;
+  height: 100%;
 }
-.navBar input[type=text]::placeholder {
-    padding: 5%;
-    font-size: 1em;
-    font-weight: 200;
-    color: #5b5b5b;
-    font-family: FontAwesome, sans-serif;
+@media (max-width: 700px ) {
+  .navBar {
+      padding: 0 2rem;
+  }
 }
