--- a/src/components/forms/input/Input.module.css
+++ b/src/components/forms/input/Input.module.css
@@ -20,3 +20,8 @@
   color: #5b5b5b;
   font-family: FontAwesome, sans-serif;
 }
+@media (max-width: 500px) {
+  .inputContainer{
+    width: 40vh;
+  }
+}
