--- a/src/components/cards/sale card/SaleCard.module.css
+++ b/src/components/cards/sale card/SaleCard.module.css
@@ -21,6 +21,7 @@
     text-align: center;
     font-weight: 700;
     font-size: 2.4rem;
+    padding: .2rem;
     background: #4c6b22;
 }
 .price {
